New changes on structure